--- a/WDD130/style.css
+++ b/WDD130/style.css
@@ -3,14 +3,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 @media screen and (max-width: 550px) {
-  .home-grid, nav ul {
+  .home-grid, nav ul, footer {
     display: block;
   }
 }
 
 h1, h2, h3, h4, h5, h6 {
   background-color: #FF2400;
-  }
+}
 
 body {
   background-color: #8FC0A9;
@@ -57,6 +57,8 @@ header {
   border-radius: 50px 50px 50px 50px;
 }
 
+/*
+
 nav ul {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));
@@ -75,96 +77,171 @@ nav a:hover {
   color: #FFBD19;
   background-color: #FF2400;
 }
+*/
 
- .banner-box img {
-         width: 100%;
-         margin-top: 4px;
-         }
+nav {
+	margin: 0 auto;
+  padding: 1em;
+}
+
+.navigation a:hover {
+  background-color: #FF2400;
+  color: #FFBD19;
+}
+
+.navigation {
+	list-style: none;
+  margin: 0 auto;
+	padding: 0;
+  text-align: center;
+  width: 100%;
+}
+
+.navigation li a {
+  color: #FF2400;
+}
+
+
+@media only screen and (min-width: 31.5em) {
+  nav li {
+    color: #FFBD19;
+  }
+
+  .navigation {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .navigation a:hover {
+    background-color: #FF2400;
+    color: #FFBD19;
+    font-weight: bold;
+  }
+  
+  .navigation li {
+    display: block; /* change state in small view */
+    flex: 1 1 auto;
+  }
+  
+  .navigation li a {
+    border: none;
+    color: #FF2400;
+    font-size: 1em;
+    padding: 1.2em 1em;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+  nav {
+    color:#FF2400;
+  }
+
+  nav a:hover {
+    color: #FFBD19;
+    background-color: #FF2400;
+  }
+
+  .navigation li {
+    margin: 0;
+  }
+
+  .navigation li a {
+    border: none;
+    color: #FF2400;
+    padding: .8em 1em;
+  }
+}
+
+.banner-box img {
+  width: 100%;
+  margin-top: 4px;
+}
 
 .home-grid {
-         display: grid;
-         grid-template-columns: repeat(5, 1fr);
-         grid-gap: 1em;    
-         background-color: white;
-         }      
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 1em;    
+  background-color: white;
+}      
 
- .home-headline-1 {
-              padding: 1em;
-              text-align: center;
-              line-height: 100%;
-              margin-bottom: -25px;
-              grid-column: 1/4;
-              grid-row: 1/2;
-              margin-left: 20px;
-            }
+.home-headline-1 {
+  padding: 1em;
+  text-align: center;
+  line-height: 100%;
+  margin-bottom: -25px;
+  grid-column: 1/4;
+  grid-row: 1/2;
+  margin-left: 20px;
+}
           
-      .home-paragraph-1 {
-              padding: 1em;
-              text-align: center;
-              background-color: white;
-              grid-column: 1/4;
-              grid-row: 2/4;
-            }
+.home-paragraph-1 {
+  padding: 1em;
+  text-align: center;
+  background-color: white;
+  grid-column: 1/4;
+  grid-row: 2/4;
+}
 
-      .home-right-img {
-             grid-column: 4/5;
-             grid-row: 1/3;
-             max-width: 190%;
-             border: 1px solid #ccc;
-             padding: 10px;
-             box-shadow: 10px 10px 10px #999;
-             margin-top: 4px;
-            }
+.home-right-img {
+  grid-column: 4/5;
+  grid-row: 1/3;
+  max-width: 190%;
+  border: 1px solid #ccc;
+  padding: 10px;
+  box-shadow: 10px 10px 10px #999;
+  margin-top: 4px;
+}
          
-      .home-headline-2 {
-              padding: 1em;
-              text-align: center;
-              line-height: 100%;
-              margin-bottom: -25px;
-              margin-right: 20px;
-              grid-column: 3/6;
-              grid-row: 4/5;
-            }
+.home-headline-2 {
+  padding: 1em;
+  text-align: center;
+  line-height: 100%;
+  margin-bottom: -25px;
+  margin-right: 20px;
+  grid-column: 3/6;
+  grid-row: 4/5;
+}
         
-      .home-paragraph-2 {
-              padding: 1em;
-              text-align: center;
-              background-color: white;
-              grid-column: 3/6;
-              grid-row: 5/7;
-            }
+.home-paragraph-2 {
+  padding: 1em;
+  text-align: center;
+  background-color: white;
+  grid-column: 3/6;
+  grid-row: 5/7;
+}
 
-      .home-left-img {
-             grid-column: 1/3;
-             grid-row: 4/6;
-             max-width: 95%;
-             border: 1px solid #ccc;
-             padding: 10px;
-             box-shadow: 10px 10px 10px #999;
-             margin-left: 4px;
-            }
+.home-left-img {
+  grid-column: 1/3;
+  grid-row: 4/6;
+  max-width: 95%;
+  border: 1px solid #ccc;
+  padding: 10px;
+  box-shadow: 10px 10px 10px #999;
+  margin-left: 4px;
+}
   
-      .home-headline-3 {
-              padding: 1em;
-              text-align: center;
-              line-height: 100%;
-              border-bottom: 5px dashed;
-              margin-bottom: 0px;
-              margin-left: 20px;
-              margin-right: 20px;
-            }
+.home-headline-3 {
+  padding: 1em;
+  text-align: center;
+  line-height: 100%;
+  border-bottom: 5px dashed;
+  margin-bottom: 0px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
 
-      .home-paragraph-3 {
-              text-align: center;
-              grid-column: 1/6;
-              grid-row: 7/8;
-            }
+.home-paragraph-3 {
+  text-align: center;
+  grid-column: 1/6;
+  grid-row: 7/8;
+}
     
-     .home-paragraph-4 {
-                padding: 1em;
-                text-align: center;
-                background-color: white;  
-            }              
+.home-paragraph-4 {
+  padding: 1em;
+  text-align: center;
+  background-color: white;  
+}              
 
 footer {
   height: 55px;
@@ -193,6 +270,3 @@ footer {
 .social img{
    width: 55px;
 }
-
-
-
