--- a/WDD130/experiences.css
+++ b/WDD130/experiences.css
@@ -136,6 +136,198 @@ nav {
     color: #FF2400;
     padding: .8em 1em;
   }
+
+  .experiences-grid {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-gap: 1em;    
+    background-color: white;
+  }     
+  
+  .experiences-title-1 {
+    padding: 1em;
+    text-align: center;
+    line-height: 70%;
+    margin-bottom: -25px;
+    grid-column: 1/9;
+    grid-row: 1;
+  }
+  
+  .experiences-title-2 {
+    padding: 1em;
+    text-align: center;
+    line-height: 70%;
+    margin-bottom: -25px;
+    grid-column: 1/9;
+    grid-row: 2/3;
+    margin-left: 150px;
+    margin-right: 150px;
+  }
+  
+  .experiences-left-img {
+    grid-column: 1/3;
+    grid-row: 4;
+    max-width: 100%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 10px 10px 10px #999;
+    margin-left: 4px;
+  }
+  
+  .experiences-headline-1 {
+    padding: 1em;
+    text-align: left;
+    line-height: 150%;
+    margin-bottom: -25px;
+    grid-column: 1/3;
+    grid-row: 5;
+    margin-left: 10px;
+  }
+  
+  .experiences-paragraph-1 {
+    padding: 1em;
+    text-align: left;
+    background-color: white;
+    grid-column: 1/3;
+    grid-row: 6;
+  }
+  
+  .experiences-center-img {
+    grid-column: 4/6;
+    grid-row: 4;
+    max-width: 100%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 10px 10px 10px #999;
+  }
+  
+  .experiences-headline-2 {
+    padding: 1em;
+    text-align: center;
+    line-height: 150%;
+    margin-bottom: -25px;
+    grid-column: 4/6;
+    grid-row: 5;
+    margin-left: 10px;
+  }
+  
+  .experiences-paragraph-2 {
+    padding: 1em;
+    text-align: center;
+    background-color: white;
+    grid-column: 4/6;
+    grid-row: 6;
+    margin-left: 10px;
+  }
+  
+  .experiences-right-img {
+    grid-column: 7/9;
+    grid-row: 4;
+    max-width: 100%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 10px 10px 10px #999;
+    margin-left: -30px;
+  }
+  
+  .experiences-headline-3 {
+    padding: 1em;
+    text-align: right;
+    line-height: 150%;
+    margin-bottom: -25px;
+    grid-column: 7/9;
+    grid-row: 5;
+    margin-right: 10px;
+  }
+  
+  .experiences-paragraph-3 {
+    padding: 1em;
+    text-align: right;
+    background-color: white;
+    grid-column: 7/9;
+    grid-row: 6;
+    margin-right: 10px;
+  }
+  
+  .experiences-title-3 {
+    padding: 1em;
+    text-align: center;
+    line-height: 70%;
+    margin-bottom: -25px;
+    grid-column: 1/9;
+    grid-row: 7/8;
+    margin-left: 150px;
+    margin-right: 150px;
+  }
+  
+  .experiences-headline-4 {
+    padding: 1em;
+    text-align: left;
+    line-height: 150%;
+    margin-bottom: -25px;
+    grid-column: 1/3;
+    grid-row: 10;
+    margin-left: 10px;
+  }
+  
+  .experiences-left-img-2 {
+    grid-column: 7/9;
+    grid-row: 9;
+    max-width: 70%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 10px 10px 10px #999;
+    margin-left: -30px;
+  }
+  
+  .experiences-headline-5 {
+    padding: 1em;
+    text-align: center;
+    line-height: 150%;
+    margin-bottom: -25px;
+    grid-column: 4/6;
+    grid-row: 10;
+    margin-left: 10px;
+  }
+  
+  .experiences-center-img-2 {
+    grid-column: 4/6;
+    grid-row: 9;
+    max-width: 100%;
+    margin-top: 50px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 10px 10px 10px #999;
+  }
+  
+  .experiences-headline-6 {
+    padding: 1em;
+    text-align: right;
+    line-height: 150%;
+    margin-bottom: -25px;
+    grid-column: 7/9;
+    grid-row: 10;
+    margin-right: 10px; 
+  }
+  
+  .experiences-right-img-2 {
+    grid-column: 1/3;
+    grid-row: 9;
+    max-width: 70%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 10px 10px 10px #999;
+    margin-left: 4px;
+  }
+  
+  .experiences-paragraph-4 {
+    padding: 1em;
+    text-align: center;
+    background-color: white;
+    grid-column: 2/8;
+    grid-row: 11/12;
+    margin-right: 10px;
+  }
 }
 
 .banner-box img {
@@ -143,197 +335,120 @@ nav {
   margin-top: 4px;
 }
 
-.experiences-grid {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-gap: 1em;    
+.experiences-grid {    
   background-color: white;
-}     
+}  
 
 .experiences-title-1 {
   padding: 1em;
   text-align: center;
   line-height: 70%;
-  margin-bottom: -25px;
-  grid-column: 1/9;
-  grid-row: 1;
+  margin-bottom: 5px;
+  margin-top: -5px;
 }
 
 .experiences-title-2 {
-  padding: 1em;
+  font-size: 16px;
   text-align: center;
-  line-height: 70%;
-  margin-bottom: -25px;
-  grid-column: 1/9;
-  grid-row: 2/3;
-  margin-left: 150px;
-  margin-right: 150px;
 }
 
 .experiences-left-img {
-  grid-column: 1/3;
-  grid-row: 4;
-  max-width: 100%;
+  max-width: 85%;
   border: 1px solid #ccc;
   padding: 10px;
   box-shadow: 10px 10px 10px #999;
-  margin-left: 4px;
+  margin-left: 10px;
 }
 
 .experiences-headline-1 {
-  padding: 1em;
-  text-align: left;
+  font-size: 16px;
   line-height: 150%;
-  margin-bottom: -25px;
-  grid-column: 1/3;
-  grid-row: 5;
-  margin-left: 10px;
+  text-align: center;
 }
 
 .experiences-paragraph-1 {
-  padding: 1em;
-  text-align: left;
-  background-color: white;
-  grid-column: 1/3;
-  grid-row: 6;
-}
-
-.experiences-center-img {
-  grid-column: 4/6;
-  grid-row: 4;
-  max-width: 100%;
-  border: 1px solid #ccc;
-  padding: 10px;
-  box-shadow: 10px 10px 10px #999;
+  padding: 0.5em;
+  text-align: center;
 }
 
 .experiences-headline-2 {
-  padding: 1em;
-  text-align: center;
+  font-size: 16px;
   line-height: 150%;
-  margin-bottom: -25px;
-  grid-column: 4/6;
-  grid-row: 5;
-  margin-left: 10px;
+  text-align: center;
 }
 
 .experiences-paragraph-2 {
-  padding: 1em;
+  padding: 0.5em;
   text-align: center;
-  background-color: white;
-  grid-column: 4/6;
-  grid-row: 6;
-  margin-left: 10px;
 }
 
-.experiences-right-img {
-  grid-column: 7/9;
-  grid-row: 4;
-  max-width: 100%;
+.experiences-center-img {
+  max-width: 85%;
   border: 1px solid #ccc;
   padding: 10px;
   box-shadow: 10px 10px 10px #999;
-  margin-left: -30px;
+  margin-left: 10px;
 }
 
 .experiences-headline-3 {
-  padding: 1em;
-  text-align: right;
+  font-size: 16px;
   line-height: 150%;
-  margin-bottom: -25px;
-  grid-column: 7/9;
-  grid-row: 5;
-  margin-right: 10px;
+  text-align: center;
 }
 
 .experiences-paragraph-3 {
-  padding: 1em;
-  text-align: right;
-  background-color: white;
-  grid-column: 7/9;
-  grid-row: 6;
-  margin-right: 10px;
-}
-
-.experiences-title-3 {
-  padding: 1em;
+  padding: 0.5em;
   text-align: center;
-  line-height: 70%;
-  margin-bottom: -25px;
-  grid-column: 1/9;
-  grid-row: 7/8;
-  margin-left: 150px;
-  margin-right: 150px;
 }
 
-.experiences-headline-4 {
-  padding: 1em;
-  text-align: left;
-  line-height: 150%;
-  margin-bottom: -25px;
-  grid-column: 1/3;
-  grid-row: 10;
-  margin-left: 10px;
-}
-
-.experiences-left-img-2 {
-  grid-column: 7/9;
-  grid-row: 9;
-  max-width: 70%;
+.experiences-right-img {
+  max-width: 85%;
   border: 1px solid #ccc;
   padding: 10px;
   box-shadow: 10px 10px 10px #999;
-  margin-left: -30px;
+  margin-left: 10px;
 }
 
-.experiences-headline-5 {
-  padding: 1em;
+.experiences-title-3 {
+  font-size: 16px;
   text-align: center;
+}
+
+.experiences-headline-4 {
+  font-size: 16px;
   line-height: 150%;
-  margin-bottom: -25px;
-  grid-column: 4/6;
-  grid-row: 10;
+  text-align: center;
+}
+
+.experiences-paragraph-4 {
+  padding: 0.5em;
+  text-align: center;
+}
+
+.experiences-right-img-2 {
+  max-width: 85%;
+  border: 1px solid #ccc;
+  padding: 10px;
+  box-shadow: 10px 10px 10px #999;
   margin-left: 10px;
 }
 
 .experiences-center-img-2 {
-  grid-column: 4/6;
-  grid-row: 9;
-  max-width: 100%;
-  margin-top: 50px;
+  max-width: 85%;
   border: 1px solid #ccc;
   padding: 10px;
   box-shadow: 10px 10px 10px #999;
+  margin-left: 10px;
 }
 
-.experiences-headline-6 {
-  padding: 1em;
-  text-align: right;
-  line-height: 150%;
-  margin-bottom: -25px;
-  grid-column: 7/9;
-  grid-row: 10;
-  margin-right: 10px; 
-}
-
-.experiences-right-img-2 {
-  grid-column: 1/3;
-  grid-row: 9;
-  max-width: 70%;
+.experiences-left-img-2 {
+  max-width: 85%;
   border: 1px solid #ccc;
   padding: 10px;
   box-shadow: 10px 10px 10px #999;
-  margin-left: 4px;
+  margin-left: 10px;
 }
 
-.experiences-paragraph-4 {
-  padding: 1em;
-  text-align: center;
-  background-color: white;
-  grid-column: 2/8;
-  grid-row: 11/12;
-  margin-right: 10px;
-}
 
 footer {
   height: 55px;
