--- a/WDD130/style.css
+++ b/WDD130/style.css
@@ -160,10 +160,6 @@ nav {
   }      
   
   .home-headline-1 {
-    padding: 1em;
-    text-align: center;
-    line-height: 100%;
-    margin-bottom: -25px;
     grid-column: 1/4;
     grid-row: 1/2;
     margin-left: 20px;
@@ -179,7 +175,7 @@ nav {
   
   .home-right-img {
     grid-column: 4/5;
-    grid-row: 1/3;
+    grid-row: 2/3;
     max-width: 190%;
     border: 1px solid #ccc;
     padding: 10px;
@@ -207,8 +203,7 @@ nav {
   
   .home-left-img {
     grid-column: 1/3;
-    grid-row: 4/6;
-    max-width: 95%;
+    grid-row: 5/6;
     border: 1px solid #ccc;
     padding: 10px;
     box-shadow: 10px 10px 10px #999;
@@ -235,7 +230,35 @@ nav {
     padding: 1em;
     text-align: center;
     background-color: white;  
-  }              
+  }    
+  
+  footer {
+    height: 55px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1em;
+    align-items: center;
+  }
+  
+  .social-2 { 
+    font-family: fantasy;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    padding: 1em;
+    margin: 0;
+    text-align: left;
+  }
+  
+  .social {
+    grid-column: 4/6;
+    grid-row: 1/2;
+    margin: 0;
+    padding: 1em;
+  }
+  
+  .social img{
+     width: 55px;
+  }
 
 }
 
@@ -247,7 +270,8 @@ nav {
   padding: 1em;
   text-align: center;
   line-height: 100%;
-  margin-top: -5px;
+  margin-top: 5px;
+  margin-bottom: -5px;
 }
     
 .home-paragraph-1 {
@@ -255,7 +279,7 @@ nav {
 }
 
 .home-right-img {
-  max-width: 85%;
+  width: 85%;
   border: 1px solid #ccc;
   padding: 10px;
   box-shadow: 10px 10px 10px #999;
@@ -297,30 +321,15 @@ nav {
   margin-top: 4px;
 }
 
-footer {
-  height: 55px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 1em;
-  align-items: center;
-}
-
 .social-2 { 
   font-family: fantasy;
-  grid-column: 1/3;
-  grid-row: 1/2;
   padding: 1em;
   margin: 0;
-  text-align: left;
+  text-align: center;
 }
 
 .social {
-  grid-column: 4/6;
-  grid-row: 1/2;
-  margin: 0;
+  margin-left: 0px;
   padding: 1em;
-}
-
-.social img{
-   width: 55px;
+  align-items: center;
 }
