--- a/WDD130/forms.css
+++ b/WDD130/forms.css
@@ -220,6 +220,34 @@ nav {
   .moveDown {
     margin-top: 3em;
   }
+
+  footer {
+    height: 55px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1em;
+    align-items: center;
+  }
+  
+  .social-2 { 
+    font-family: fantasy;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    padding: 1em;
+    margin: 0;
+    text-align: left;
+  }
+  
+  .social {
+    grid-column: 4/6;
+    grid-row: 1/2;
+    margin: 0;
+    padding: 1em;
+  }
+  
+  .social img{
+     width: 55px;
+  }
 }
 
 .button {
@@ -268,31 +296,20 @@ ul {
   margin-top: 4px;
 }
 
-footer {
-  height: 55px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 1em;
-  align-items: center;
-}
-
 .social-2 { 
   font-family: fantasy;
-  grid-column: 1/3;
-  grid-row: 1/2;
   padding: 1em;
   margin: 0;
-  text-align: left;
+  text-align: center;
 }
 
 .social {
-  grid-column: 4/6;
-  grid-row: 1/2;
-  margin: 0;
+  margin-left: 0px;
   padding: 1em;
+  align-items: center;
 }
 
 .social img{
-   width: 55px;
+  width: 50px;
 }
 
