--- a/WDD230/css/indexsmall.css
+++ b/WDD230/css/indexsmall.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 body {
   display: block;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Oswald', sans-serif;
+  font-size: 16px;
   font-size: 16px;
   line-height: 1.5;
   margin: 8px;
