--- a/css/indexsmall.css
+++ b/css/indexsmall.css
@@ -46,13 +46,13 @@ h2 {
   
 ul a{
   padding: 0.25em 0.25em;
-  color: black;
+  color: navy;
   line-height: 2em;
 }
 
 ul a:hover{
-  background-color: navy;
-  color: rgba(241, 238, 23, 0.959);
+  background-color: whitesmoke;
+  color: navy;
   border-radius: 4.5px;
   box-shadow: 4.5px 4.5px 4.5px;
 }
