--- a/css/indexsmall.css
+++ b/css/indexsmall.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+/* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
+html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
+
+/*----------- apply a natural box layout model to all elements --------------*/
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
 body {
   display: block;
   font-family: 'Roboto', sans-serif;
@@ -18,9 +25,9 @@ footer {
 
 header,
 footer {
-  background-color: navy;
-  border: 1px solid navy;
-  color: #fff;
+  background: whitesmoke;
+  border: 2px solid #000000;
+  color: black;
   font-family: 'Antonio', sans-serif;
   padding: 0.25rem;
   text-align: center;
@@ -59,4 +66,56 @@ ul a:hover{
 
 footer a {
   color: white;
+}
+
+/*
+#allProjectInfo {
+  background: navy;
+	border: 2px solid #000000;
+  display: flex;
+  flex-direction: column;
+	margin-top: 10px;
+  margin-bottom: 10px;
+  overflow: auto;
+	padding: 15px;
+}
+*/
+
+#allProjectInfo article {
+  background: whitesmoke;
+  border: 2px solid #000000;
+	display: flex;
+	flex-direction: column;
+	margin: 10px;
+	padding: 35px;
+}
+
+#allProjectInfo img {
+	box-shadow: 0 0 20px #000000;
+  height: auto;
+	width: 100%; 
+}
+
+#allProjectInfo div {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+	padding: 15px;
+	text-align: center;
+}
+
+.townInfoImg {
+	margin: 0;
+  width: 100%;
+}
+
+.p01, .p02, .p03, .p04, a {
+  color: black;
+  text-align: center;
+}
+
+a:hover{
+  background-color: navy;
+  color: whitesmoke;
+  border-radius: 4.5px;
 }
