--- a/css/indexsmall.css
+++ b/css/indexsmall.css
@@ -96,6 +96,8 @@ footer a {
 	width: 100%; 
 }
 
+/*
+
 #allProjectInfo div {
   align-items: center;
   display: flex;
@@ -103,8 +105,9 @@ footer a {
 	padding: 15px;
 	text-align: center;
 }
+*/
 
-.townInfoImg {
+.projectInfoImg {
 	margin: 0;
   width: 100%;
 }
@@ -118,4 +121,40 @@ a:hover{
   background-color: navy;
   color: whitesmoke;
   border-radius: 4.5px;
+}
+
+.article {
+  background-color: rgba(0,0,0,.1);
+  border: 2px solid black;
+  margin-top: 10px;
+  overflow: auto;
+  padding: 15px;
+}
+
+#articleArea {
+  background: whitesmoke;
+	border: 2px solid #000000;
+	margin-top: 10px;
+  margin-bottom: 10px;
+  overflow: auto;
+	padding: 15px;
+}
+
+#articleArea img {
+  box-shadow: 0 0 20px #000000;
+  display: block;
+  height:	auto;
+	width: 100%;
+}	
+
+.articleImg {
+	margin: 0;
+	width: 100%;
+}
+
+.article img{
+  border: 2px solid darkblue;
+  display: block;
+  margin: 0;
+  width: 100%;
 }
