--- a/css/indexsmall.css
+++ b/css/indexsmall.css
@@ -68,9 +68,9 @@ footer a {
   color: white;
 }
 
-/*
+
 #allProjectInfo {
-  background: navy;
+  background: whitesmoke;
 	border: 2px solid #000000;
   display: flex;
   flex-direction: column;
@@ -79,7 +79,7 @@ footer a {
   overflow: auto;
 	padding: 15px;
 }
-*/
+
 
 #allProjectInfo article {
   background: whitesmoke;
@@ -96,7 +96,7 @@ footer a {
 	width: 100%; 
 }
 
-/*
+
 
 #allProjectInfo div {
   align-items: center;
@@ -105,7 +105,7 @@ footer a {
 	padding: 15px;
 	text-align: center;
 }
-*/
+
 
 .projectInfoImg {
 	margin: 0;
